http-metrics/l7-ingress-hubble.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "default-ingress-visibility-for-http-metrics"
spec:
  description: "Allow HTTP GET /public from env=prod to app=service"
  endpointSelector:
    matchLabels:
      "hubble-metrics": default
  ingress:
      - fromEndpoints:
        - {}
